[package]
name = "unicorn"
version = "0.1.0"
authors = ["martin"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spidev = { git = "https://github.com/rust-embedded/rust-spidev" }
freetype-rs = "0.26.0"
[dependencies.ctrlc]
version = "3.1.6"
features = ["termination"]
