[package]
name = "unicorn"
version = "0.1.0"
authors = ["martin"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spidev = { git = "https://github.com/rust-embedded/rust-spidev" }
freetype-rs = "0.26.0"
ndarray = "0.12"
warp = "0.2"

[dependencies.tokio]
version = "0.2"
features = ["full"]

